--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,15 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation('org.springframework.boot:spring-boot-starter-validation')
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude module: 'junit'
+	}
+	testImplementation("org.junit.jupiter:junit-jupiter-api")
+	testCompile("org.junit.jupiter:junit-jupiter-params")
+	testRuntime("org.junit.jupiter:junit-jupiter-engine")
+	compile("org.springframework.boot:spring-boot-starter-mail")
+	compile "org.springframework:spring-context-support"
 }
 
 test {
