--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
+server:
+  port: 8080
+
 # database
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/todo?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/todo?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -27,17 +30,17 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
-        hbm2ddl:
-          import_files_sql_extractor: org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
-        dialect: org.hibernate.dialect.MySQL55Dialect
     generate-ddl: true
 
-  logging:
-    level:
-      org:
-        hibernate:
-          SQL: DEBUG
-          type:
-            descriptor:  # SQL에서 물음표로 표기된 부분( bind parameter )을 로그로 출력해서 확인
-              sql: TRACE
+  profiles:
+    active: local
 
+
+
+logging:
+  level:
+    org:
+      hibernate:
+        type:
+          descriptor:  # SQL에서 물음표로 표기된 부분( bind parameter )을 로그로 출력해서 확인
+            sql: trace
