--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	testRuntime("org.junit.jupiter:junit-jupiter-engine")
 	compile("org.springframework.boot:spring-boot-starter-mail")
 	compile "org.springframework:spring-context-support"
+	compile group: 'com.auth0', name: 'java-jwt', version: '3.10.0'
+	compile group: 'com.github.seratch', name: 'jslack', version: '3.4.2'
+
 }
 
 test {
