--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     database: mysql
     open-in-view: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
         #데이터베이스 초기화 전략을 설정합니다.
         #none
         #아무것도 실행하지 않습니다.
