--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: haru9760@gmail.com
-    password: Korea123!!
+    password: 
     properties:
       mail:
         smtp:
