feat: 섹션 crud 기능 추가 및 response 인코딩 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: haru9760@gmail.com
-    password: 
+    password: Korea123!!
     properties:
       mail:
         smtp:
