feat: todo 소스 수정 및 카테고리 dto @localdateform 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: haru9760@gmail.com
+#    todo: application.yml 비번 암호화 하는 방법 or 운영 서버에 커밋시 비번은 들어가있는데 사용자에게 보이지 않게하는 방법 있는지
     password: Korea123!!
     properties:
       mail:
