--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	compile "org.springframework:spring-context-support"
 	compile group: 'com.auth0', name: 'java-jwt', version: '3.10.0'
 	compile group: 'com.github.seratch', name: 'jslack', version: '3.4.2'
-
+	compile "com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3"
 }
 
 test {
