--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 # database
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/todo?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
-    username: ENC(Zu52UORZKgBQtefcIQ85vg==)
-    password: ENC(DfXDZvNDIdCOCy9XJmDqRw==)
+    url: jdbc:mysql://tododb.cyp7o4qafe9k.us-east-2.rds.amazonaws.com:3306/TodoDB?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
+    username: ENC(Ah4kj23TqfZK5MeATmwIdw==)
+    password: ENC(AZM6OaTFMJdApOM4ude4BrIVtvPXsSML)
     driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: always
   jpa:
