feat: 디비연결 test

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 # database
 spring:
   datasource:
-    url: jdbc:mysql://tododb.cyp7o4qafe9k.us-east-2.rds.amazonaws.com:3306/TodoDB?autoReconnect=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://tododb.cyp7o4qafe9k.us-east-2.rds.amazonaws.com:3306/TodoDB
     username: ENC(Ah4kj23TqfZK5MeATmwIdw==)
     password: ENC(AZM6OaTFMJdApOM4ude4BrIVtvPXsSML)
     driver-class-name: com.mysql.cj.jdbc.Driver
