--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,16 +4,16 @@ server:
 # database
 spring:
   datasource:
-    url: jdbc:mysql://tododb.cyp7o4qafe9k.us-east-2.rds.amazonaws.com:3306/TodoDB
-    username: ENC(Ah4kj23TqfZK5MeATmwIdw==)
-    password: ENC(AZM6OaTFMJdApOM4ude4BrIVtvPXsSML)
+    url: jdbc:mysql://tododb.cyp7o4qafe9k.us-east-2.rds.amazonaws.com:3306/tododb
+    username: ENC(4YMmM6peFUyookJsm6ZmCw==)
+    password: ENC(44aHY4aX76XOEBvuAc9d0ptO05b1LbTI)
     driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: always
   jpa:
     database: mysql
     open-in-view: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
         #데이터베이스 초기화 전략을 설정합니다.
         #none
         #아무것도 실행하지 않습니다.
